env changes, made error referring to name and not fullname db entry

--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,1 @@
-REACT_APP_API_URL=https://rocky-crag-32576-61364c2a4cab.herokuapp.com/api
+REACT_APP_API_URL=https://rocky-crag-32576-61364c2a4cab.herokuapp.com
