--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,1 @@
-REACT_APP_API_URL=https://rocky-crag-32576-61364c2a4cab.herokuapp.com/api
+REACT_APP_API_URL=https://rocky-crag-32576-61364c2a4cab.herokuapp.com
